--- a/views/_task_form.ejs
+++ b/views/_task_form.ejs
@@ -17,6 +17,6 @@
                 <option value="School">School</option>
             </select>
         </div>
-        <button type="submit">Add contact</button>
+        <button type="submit">Add task</button>
     </form>
 </div>
