--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/59d3bf4800.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/layout.css">
     <%- style %>
-    <title>Document</title>
+    <title>To Do</title>
 </head>
 <body>
     <%- include('_header'); %>
