--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,9 +3,6 @@ main{
     text-align: center;
 }
 
-
-
-
 .li:last-child{
     margin-bottom: 100px;
 }
@@ -204,22 +201,11 @@ span#desc{
     margin: 0;
 }
 
-#form-page{
-    padding: 50px 30px;
-    width:80%;
-    border: 1px solid rgb(3, 3, 143);
-    border-radius: 20px;
-    
+#empty-status{
+    margin-top:100px;
+
 }
 
-
-#form-page input{
-    width:90%;
-}
-
-#form-page h1{
-    margin-bottom: 80px;
-}
 
 @media screen and (max-width: 1000px){
     #form{
@@ -241,28 +227,3 @@ span#desc{
 }
 
 
-
-/* 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- */
