--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -17,6 +17,7 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <a href="/user/sign-out">Sign Out</a>
       </div>
     </div>
   </nav>
