--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="POST">
+    <form action="/user/create-session" method="POST">
         <input type="email" name="email" id="" placeholder="Email" required>
         <input type="password" name="password" id="" placeholder="password"required>
         <input type="submit" value="Sign in">
