--- a/views/social_home_page.ejs
+++ b/views/social_home_page.ejs
@@ -1,22 +1,22 @@
 <section>
     <H3>Posts</H3>
-    <form action="/user/home/post/create-post" method="post">
-        <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
-        <input type="submit" value="Post">
-    </form>
+    <% if (locals.user){ %>
+        <%- include('_postForm') -%>
+    <%}%>
     <div id="post-container">
         <ul>
             <% for(post of locals.posts){%>
-                <p>
-                    <li>
-                        <%= post.content %>
-                        <br>
-                        <%= post.user.name%>
-                    </li>
-                </p>
+                
+                    <%- include('_post') -%>
+                
                 
             <%} %>
         </ul>
 
+    </div>
+
+    <div id="friends container">
+        <h3>Friends</h3>
+        <%- include('_users_list') -%>
     </div>
 </section>
