--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="comment-<%= comment.id%>">
     <p><%= comment.content%><br>
     <span><%=comment.user.name%></span>
         <% if (locals.user && locals.user.id == comment.user.id){%>
-        <a href="/comment/destroy/<%= comment.id %>">
+        <a href="/comment/destroy/<%= comment.id %>" class="delete-comment-button">
             X
         </a>
         <%}%>
