--- a/views/_commentForm.ejs
+++ b/views/_commentForm.ejs
@@ -1,4 +1,4 @@
-<form action="/comment/create-comment" method="post">
+<form action="/comment/create-comment" method="post" class="comment-form">
     <input type="text" name="content" id="" placeholder="Enter comment here.." required>
     <input type="hidden" name="postid" value="<%= post._id%>">
     <input type="submit" value="Submit">
