--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,12 @@
 <section>
+
+    <img src="<%= profile_user.avatar%>" alt="<%= profile_user.name%>" width="150px">
+    
     <%if (locals.user.id == profile_user.id){%>
-        <form action="/user/update/<%= profile_user.id%>" method="POST">
+        <form action="/user/update/<%= profile_user.id%>" enctype="multipart/form-data" method="POST">
             <input type="text" name="name" id="" value="<%= user.name%>" required>
             <input type="email" name="email" id="" value="<%= user.email%>" required>
+            <input type="file" name="avatar" id="" placeholder="Profile Picture">
             <input type="submit" value="Update">
         </form>
 
