--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -12,4 +12,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <a href="/user/auth/google">
+        <button>
+        SIgn in usign google
+        </button>
+    </a>
   </div>
