--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -19,4 +19,10 @@
           </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+    <a href="/user/auth/google">
+      <button>
+      SIgn in usign google
+      </button>
+  </a>
 </div>
